[metadata]
name = tmotor_serial_control
version = 0.0.1
author = Yuanzhe Dong
author_email = yzd@stanford.edu
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires=
    numpy
    NeuroLocoMiddleware
    pyserial>=3.5
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src    